kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: dev
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: api-gateway
  type: NodePort
